--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Henrique Silva'
+  github_nickname: 'hbs003'
+- name: 'Jesse Davis'
+  github_nickname: 'jessedavis93'
